# mavsdk_interface

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  selva.txt
app/: CMakeLists.txt
app/include/: fastdds_thread.h  include_helper.h  mainwindow.h  offboard_thread.h
app/mainwindow/: CMakeLists.txt
app/mainwindow/include/: custom_types.h  include_helper.h  mainwindow.h
app/mainwindow/src/: mainwindow.cpp  mainwindow.ui  mavsdk_tasks.cpp  set_disp_names.cpp  set_disp_options.cpp  set_values.cpp
app/parameters/: demos.yaml  port_addresses.yaml
app/src/: circle_mode.cpp  fastdds_thread.cpp  lemniscate_mode.cpp  mainwindow.cpp  mainwindow.ui  offboard_thread.cpp
app/threads/: CMakeLists.txt
app/threads/offboard/: CMakeLists.txt
app/threads/offboard/include/: offboard_thread.h  sub_variables.h
app/threads/offboard/src/: offboard_thread.cpp
app/threads/publish_position/: CMakeLists.txt
app/threads/publish_position/include/: publish_position_thread.h
app/threads/publish_position/src/: publish_position_thread.cpp
external_executables/: circle_traj_position
lib/: CMakeLists.txt
